--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "@apollo/server": "^4.9.1",
+        "@elastic/elasticsearch": "^8.11.0",
         "@prisma/client": "^5.2.0",
         "@types/uuid": "^8.3.4",
         "axios": "^1.4.0",
@@ -22,6 +23,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "ejs": "^3.1.8",
+        "elasticsearch": "^16.7.3",
         "express": "^4.18.1",
         "express-async-errors": "^3.1.1",
         "googleapis": "^109.0.1",
@@ -40,6 +42,7 @@
         "nodemailer": "^6.8.0",
         "pg": "^8.7.3",
         "pg-hstore": "^2.3.4",
+        "react-dom": "^18.2.0",
         "sequelize": "^6.21.2",
         "socket.io": "^4.7.2",
         "twilio": "^4.10.0",
@@ -62,6 +65,7 @@
         "@types/morgan": "^1.9.3",
         "@types/multer": "^1.4.7",
         "@types/nodemailer": "^6.4.6",
+        "@types/react-dom": "^18.2.19",
         "bcryptjs": "^2.4.3",
         "customize-cra": "^1.0.0",
         "morgan": "^1.10.0",
