--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@elastic/elasticsearch": "^8.11.0",
         "@prisma/client": "^5.2.0",
         "@types/uuid": "^8.3.4",
+        "address": "^2.0.2",
         "axios": "^1.6.7",
         "body-parser": "^1.20.0",
         "bytes": "^3.1.2",
@@ -26,6 +27,7 @@
         "elasticsearch": "^16.7.3",
         "express": "^4.18.1",
         "express-async-errors": "^3.1.1",
+        "getmac": "^6.6.0",
         "googleapis": "^109.0.1",
         "graphql": "^16.8.0",
         "gridfs-stream": "^1.1.1",
